fix foot link spacing

--- a/assets/src/css/footer/_.scss
+++ b/assets/src/css/footer/_.scss
@@ -29,7 +29,7 @@ body > footer {
 		}
 	}
 
-	nav {
+	nav.menu {
 		display: inline-block;
 
 		li {
